Added nightly requirement for x86_64 dependency on windows targets

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,10 +14,30 @@ jobs:
         os: [macos-latest, ubuntu-latest, windows-latest]
     steps:
       - uses: actions/checkout@v2
+
       - name: Build
         run: cargo build --workspace --all-features --verbose
+        if: runner.os != 'Windows'
+
       - name: Build examples
         run: cargo build --workspace --all-features --examples --verbose
+        if: runner.os != 'Windows'
+
+      - name: Set up Rust nightly
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
+          override: true
+        if: runner.os == 'Windows'
+
+      - name: Build (nightly)
+        run: cargo +nightly build --workspace --all-features --verbose
+        if: runner.os == 'Windows'
+
+      - name: Build examples (nightly)
+        run: cargo +nightly build --workspace --all-features --examples --verbose
+        if: runner.os == 'Windows'
 
   test:
     runs-on: ${{ matrix.os }}
@@ -26,8 +46,22 @@ jobs:
         os: [macos-latest, ubuntu-latest, windows-latest]
     steps:
       - uses: actions/checkout@v2
+
       - name: Run all tests
         run: cargo test --workspace --all-features --verbose
+        if: runner.os != 'Windows'
+
+      - name: Set up Rust nightly
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
+          override: true
+        if: runner.os == 'Windows'
+
+      - name: Run all tests (nightly)
+        run: cargo +nightly test --workspace --all-features --verbose
+        if: runner.os == 'Windows'
 
   lint:
     runs-on: ubuntu-latest
