--- a/memflow-core/Cargo.toml
+++ b/memflow-core/Cargo.toml
@@ -16,7 +16,6 @@ bitflags = "1.2.1"
 coarsetime = { version = "0.1.13", optional = true }
 smallvec = { version = "1.4.0", default-features = false }
 arrayvec = { version = "0.5.1", default-features = false }
-x86_64 = { version = "0.11.0", optional = true, default-features = false, features = ["stable"] }
 rand = { version = "0.7.3", optional = true }
 rand_xorshift = { version = "0.2.0", optional = true }
 bumpalo = { version = "3.4.0", features = ["collections"] }
@@ -29,11 +28,24 @@ serde = { version = "1.0", optional = true, default-features = false, features =
 dirs = { version = "3.0", optional = true }
 hashbrown = "0.8"
 
+[target.'cfg(not(windows))'.dependencies]
+x86_64 = { version = "0.11.0", optional = true, default-features = false, features = ["stable"] }
+
+# currently x86_64 will only compile with msvc with inline_asm enabled
+[target.'cfg(windows)'.dependencies]
+x86_64 = { version = "0.11.0", optional = true, default-features = false, features = ["nightly"] }
+
 [dev-dependencies]
-x86_64 = { version = "0.11.0", default-features = false, features = ["stable"] }
 rand = { version = "0.7.3" }
 rand_xorshift = "0.2.0"
 memflow-derive = { path = "../memflow-derive" }
+
+[target.'cfg(not(windows))'.dev-dependencies]
+x86_64 = { version = "0.11.0", default-features = false, features = ["stable"] }
+
+# currently x86_64 will only compile with msvc with inline_asm enabled
+[target.'cfg(windows)'.dev-dependencies]
+x86_64 = { version = "0.11.0", default-features = false, features = ["nightly"] }
 
 [features]
 default = ["std", "serde_derive", "inventory", "filemap"]
