--- a/memflow-core/Cargo.toml
+++ b/memflow-core/Cargo.toml
@@ -12,15 +12,16 @@ readme = "README.md"
 [dependencies]
 dataview = { version = "0.1", features = ["derive_pod"] }
 log = "0.4.8"
-bitflags = "1.2.1"
+bitflags = "1.2"
 coarsetime = { version = "0.1.13", optional = true }
-smallvec = { version = "1.4.0", default-features = false }
-arrayvec = { version = "0.5.1", default-features = false }
-rand = { version = "0.7.3", optional = true }
-rand_xorshift = { version = "0.2.0", optional = true }
-bumpalo = { version = "3.4.0", features = ["collections"] }
-no-std-compat = { version = "0.4.0", features = ["alloc"] }
-itertools = { version = "0.9.0", default-features = false }
+x86_64 = { version = "0.11", optional = true, default-features = false, features = ["stable"] }
+smallvec = { version = "1.4", default-features = false }
+arrayvec = { version = "0.5", default-features = false }
+rand = { version = "0.7", optional = true }
+rand_xorshift = { version = "0.2", optional = true }
+bumpalo = { version = "3.4", features = ["collections"] }
+no-std-compat = { version = "0.4", features = ["alloc"] }
+itertools = { version = "0.9", default-features = false }
 vector-trees = { git = "https://github.com/h33p/vector-trees", features = ["bumpalo"] }
 libloading = { version = "0.6", optional = true }
 memmap = { version = "0.7", optional = true }
@@ -28,24 +29,11 @@ serde = { version = "1.0", optional = true, default-features = false, features =
 dirs = { version = "3.0", optional = true }
 hashbrown = "0.8"
 
-[target.'cfg(not(windows))'.dependencies]
-x86_64 = { version = "0.11.0", optional = true, default-features = false, features = ["stable"] }
-
-# currently x86_64 will only compile with msvc with inline_asm enabled
-[target.'cfg(windows)'.dependencies]
-x86_64 = { version = "0.11.0", optional = true, default-features = false, features = ["nightly"] }
-
 [dev-dependencies]
-rand = { version = "0.7.3" }
-rand_xorshift = "0.2.0"
+x86_64 = { version = "0.11", default-features = false, features = ["stable"] }
+rand = { version = "0.7" }
+rand_xorshift = "0.2"
 memflow-derive = { path = "../memflow-derive" }
-
-[target.'cfg(not(windows))'.dev-dependencies]
-x86_64 = { version = "0.11.0", default-features = false, features = ["stable"] }
-
-# currently x86_64 will only compile with msvc with inline_asm enabled
-[target.'cfg(windows)'.dev-dependencies]
-x86_64 = { version = "0.11.0", default-features = false, features = ["nightly"] }
 
 [features]
 default = ["std", "serde_derive", "inventory", "filemap"]
@@ -57,3 +45,4 @@ alloc = []
 serde_derive = ["serde"]
 inventory = ["libloading", "dirs"]
 filemap = ["memmap"]
+nightly = ["x86_64/nightly"]
