--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,11 @@ jobs:
 
       - name: Run all tests
         run: cargo test --workspace --verbose
-        if: runner.os != 'Windows'
+        if: runner.os == 'Linux'
+
+      - name: Run all tests
+        run: cargo test --workspace --exclude memflow-derive --verbose
+        if: runner.os == 'macOS'
 
       - name: Set up Rust nightly
         uses: actions-rs/toolchain@v1
@@ -60,7 +64,7 @@ jobs:
         if: runner.os == 'Windows'
 
       - name: Run all tests (nightly)
-        run: cargo +nightly test --workspace --all-features --verbose
+        run: cargo +nightly test --workspace --exclude memflow-derive --all-features --verbose
         if: runner.os == 'Windows'
 
   lint:
