--- a/memflow-core/Cargo.toml
+++ b/memflow-core/Cargo.toml
@@ -14,7 +14,6 @@ dataview = { version = "0.1", features = ["derive_pod"] }
 log = "0.4.8"
 bitflags = "1.2"
 coarsetime = { version = "0.1.13", optional = true }
-x86_64 = { version = "0.11", optional = true, default-features = false, features = ["stable"] }
 smallvec = { version = "1.4", default-features = false }
 arrayvec = { version = "0.5", default-features = false }
 rand = { version = "0.7", optional = true }
@@ -29,11 +28,16 @@ serde = { version = "1.0", optional = true, default-features = false, features =
 dirs = { version = "3.0", optional = true }
 hashbrown = "0.8"
 
+[target.'cfg(target_arch = "x86_64")'.dependencies]
+x86_64 = { version = "0.11", optional = true, default-features = false, features = ["stable"] }
+
 [dev-dependencies]
-x86_64 = { version = "0.11", default-features = false, features = ["stable"] }
 rand = { version = "0.7" }
 rand_xorshift = "0.2"
 memflow-derive = { path = "../memflow-derive" }
+
+[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
+x86_64 = { version = "0.11", default-features = false, features = ["stable"] }
 
 [features]
 default = ["std", "serde_derive", "inventory", "filemap"]
