--- a/memflow-derive/Cargo.toml
+++ b/memflow-derive/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "memflow-derive"
 version = "0.1.0"
-authors = ["ko1N <ko1N1337@gmail.com>"]
+authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
 edition = "2018"
 license = "MIT"
 description = "derive macros for the memflow physical memory introspection framework"
@@ -19,4 +19,4 @@ quote = "1.0"
 darling = "0.10"
 
 [dev-dependencies]
-memflow-core = { path = "../memflow-core" }
+memflow-core = { version = "0.1", path = "../memflow-core" }
