--- a/memflow-derive/Cargo.toml
+++ b/memflow-derive/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
 edition = "2018"
 license = "MIT"
 description = "derive macros for the memflow physical memory introspection framework"
-homepage = "https://github.com/memflow/memflow"
+homepage = "https://memflow.github.io"
 repository = "https://github.com/memflow/memflow"
 readme = "README.md"
 
