--- a/memflow-ffi/Cargo.toml
+++ b/memflow-ffi/Cargo.toml
@@ -5,9 +5,9 @@ authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
 edition = "2018"
 license = "MIT"
 description = "C bindings for the memflow physical memory introspection framework"
-homepage = "https://github.com/memflow/memflow"
+homepage = "https://memflow.github.io"
 repository = "https://github.com/memflow/memflow"
-readme = "README.md"
+readme = "../README.md"
 keywords = [ "memflow", "introspection", "memory", "dma" ]
 categories = [ "api-bindings", "memory-management", "os" ]
 
