--- a/memflow-win32-ffi/Cargo.toml
+++ b/memflow-win32-ffi/Cargo.toml
@@ -8,6 +8,7 @@ license = "MIT"
 description = "C bindings to memflow-win32"
 homepage = "https://memflow.github.io"
 repository = "https://github.com/memflow/memflow"
+readme = "../README.md"
 keywords = [ "memflow", "introspection", "memory", "dma" ]
 categories = [ "api-bindings", "memory-management", "os" ]
 
