--- a/memflow-win32/Cargo.toml
+++ b/memflow-win32/Cargo.toml
@@ -3,10 +3,13 @@ name = "memflow-win32"
 version = "0.1.0"
 authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
 edition = "2018"
+license = "MIT"
 description = "win32 integration of the memflow physical memory introspection framework"
-homepage = "https://github.com/memflow/memflow"
+homepage = "https://memflow.github.io"
 repository = "https://github.com/memflow/memflow"
-readme = "README.md"
+readme = "../README.md"
+keywords = [ "memflow", "introspection", "memory", "dma" ]
+categories = [ "api-bindings", "memory-management", "os" ]
 
 [dependencies]
 memflow = { version = "0.1", path = "../memflow", default-features = false }
