--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -18,6 +18,7 @@ bitflags = "1.2"
 coarsetime = { version = "0.1", optional = true }
 smallvec = { version = "1.4", default-features = false }
 arrayvec = { version = "0.5", default-features = false }
+x86_64_structs = { version = "0.11", git = "https://github.com/memflow/x86_64_structs" }
 rand = { version = "0.7", optional = true }
 rand_xorshift = { version = "0.2", optional = true }
 bumpalo = { version = "3.4", features = ["collections"] }
@@ -30,25 +31,19 @@ serde = { version = "1.0", optional = true, default-features = false, features =
 dirs = { version = "3.0", optional = true }
 hashbrown = "0.8"
 
-[target.'cfg(target_arch = "x86_64")'.dependencies]
-x86_64 = { version = "0.11", optional = true, default-features = false, features = ["stable"] }
-
 [dev-dependencies]
+x86_64_structs = { version = "0.11", git = "https://github.com/memflow/x86_64_structs" }
 rand = { version = "0.7" }
 rand_xorshift = "0.2"
 memflow-derive = { path = "../memflow-derive" }
 
-[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
-x86_64 = { version = "0.11", default-features = false, features = ["stable"] }
-
 [features]
 default = ["std", "serde_derive", "inventory", "filemap"]
 trace_mmu = [] # enables debug traces in the mmu (very verbose)
-dummy_mem = ["x86_64", "rand", "rand_xorshift"]
+dummy_mem = ["rand", "rand_xorshift"]
 std = ["coarsetime", "no-std-compat/std"]
 collections = []
 alloc = []
 serde_derive = ["serde"]
 inventory = ["libloading", "dirs"]
 filemap = ["memmap"]
-nightly = ["x86_64/nightly"]
