--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,11 +35,6 @@ jobs:
           use-cross: true
           command: build
           args: --target aarch64-unknown-linux-gnu --workspace --all-features --verbose
-      - uses: actions-rs/cargo@v1
-        with:
-          use-cross: true
-          command: test
-          args: --target aarch64-unknown-linux-gnu --workspace --all-features --verbose
             
   test:
     runs-on: ${{ matrix.os }}
@@ -56,6 +51,21 @@ jobs:
       - name: Run all tests
         run: cargo test --workspace --exclude memflow-derive --all-features --verbose
         if: runner.os != 'Linux'
+
+  test-cross-aarch64:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: aarch64-unknown-linux-gnu
+          override: true
+      - uses: actions-rs/cargo@v1
+        with:
+          use-cross: true
+          command: test
+          args: --target aarch64-unknown-linux-gnu --workspace --all-features --verbose
 
   lint:
     runs-on: ubuntu-latest
