--- a/memflow-bench/Cargo.toml
+++ b/memflow-bench/Cargo.toml
@@ -1,19 +1,25 @@
 [package]
 name = "memflow-bench"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Aurimas Blažulionis <0x60@pm.me>"]
 edition = "2018"
+license = "MIT"
 description = "benchmarks for the memflow physical memory introspection framework"
-homepage = "https://github.com/memflow/memflow"
+homepage = "https://memflow.github.io"
 repository = "https://github.com/memflow/memflow"
 readme = "README.md"
+keywords = [ "memflow", "introspection", "memory", "dma" ]
+categories = [ "memory-management", "os" ]
+publish = false
 
 [dependencies]
 memflow = { path = "../memflow", features = ["dummy_mem"] }
 rand = "0.7"
 rand_xorshift = "0.2"
+
 # This branch provides throughput plots
 criterion = { git = "https://github.com/h33p/criterion.rs.git", branch = "tput" }
+
 memflow-win32 = { path = "../memflow-win32" }
 
 [dev-dependencies]
