--- a/memflow-ffi/Cargo.toml
+++ b/memflow-ffi/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "memflow-ffi"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
 edition = "2018"
 license = "MIT"
 description = "C bindings for the memflow physical memory introspection framework"
 homepage = "https://memflow.github.io"
 repository = "https://github.com/memflow/memflow"
-readme = "../README.md"
+readme = "README.md"
 keywords = [ "memflow", "introspection", "memory", "dma" ]
 categories = [ "api-bindings", "memory-management", "os" ]
 
