--- a/memflow-win32-ffi/Cargo.toml
+++ b/memflow-win32-ffi/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "memflow-win32-ffi"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Aurimas Blažulionis <0x60@pm.me>"]
 edition = "2018"
 license = "MIT"
 description = "C bindings to memflow-win32"
 homepage = "https://memflow.github.io"
 repository = "https://github.com/memflow/memflow"
-readme = "../README.md"
+readme = "README.md"
 keywords = [ "memflow", "introspection", "memory", "dma" ]
 categories = [ "api-bindings", "memory-management", "os" ]
 
