--- a/memflow-win32/Cargo.toml
+++ b/memflow-win32/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "memflow-win32"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
 edition = "2018"
 license = "MIT"
 description = "win32 integration of the memflow physical memory introspection framework"
 homepage = "https://memflow.github.io"
 repository = "https://github.com/memflow/memflow"
-readme = "../README.md"
+readme = "README.md"
 keywords = [ "memflow", "introspection", "memory", "dma" ]
 categories = [ "api-bindings", "memory-management", "os" ]
 
@@ -15,7 +15,7 @@ categories = [ "api-bindings", "memory-management", "os" ]
 memflow = { version = "0.1", path = "../memflow", default-features = false }
 log = { version = "0.4", default-features = false }
 dataview = "0.1"
-pelite = { version = "0.8", git = "https://github.com/h33p/pelite", branch = "wrap", default-features = false }
+pelite = { version = "0.9", default-features = false }
 widestring = { version = "0.4", default-features = false, features = ["alloc"] }
 no-std-compat = { version = "0.4", features = ["alloc"] }
 serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
@@ -40,15 +40,15 @@ colored = "2.0"
 [build_dependencies]
 toml = "0.5"
 dataview = "0.1"
-serde = { version = "1.0", default-features = false, features = ["derive"] }
+serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
 
 [features]
 default = ["std", "serde_derive", "embed_offsets", "symstore", "download_progress"]
 std = ["no-std-compat/std", "memflow/std"]
-embed_offsets = ["serde_derive"]
+embed_offsets = ["serde", "memflow/serde_derive"]
 collections = []
 alloc = []
-serde_derive = ["serde", "memflow/serde_derive", "pelite/serde"]
+serde_derive = ["serde", "memflow/serde_derive", "pelite/std", "pelite/serde"]
 symstore = ["dirs", "ureq", "pdb"]
 download_progress = ["pbr", "progress-streams"]
 
