--- a/nostd-test/Cargo.toml
+++ b/nostd-test/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "nostd-test"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Aurimas Blažulionis <0x60@pm.me>"]
 edition = "2018"
+license = "MIT"
+homepage = "https://memflow.github.io"
+repository = "https://github.com/memflow/memflow"
+publish = false
 
 [profile.release]
 panic = "abort"
