--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,6 +106,11 @@ jobs:
           profile: minimal
           toolchain: nightly
           override: true
+      - name: grcov workaround
+        run: |
+          cd ..
+          mv memflow memflow-repo
+          cd memflow-repo
       - run: cargo install grcov
       - name: Run tests with coverage
         run: |
