--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -18,7 +18,7 @@ bitflags = "1.2"
 coarsetime = { version = "0.1", optional = true }
 smallvec = { version = "1.4", default-features = false }
 arrayvec = { version = "0.5", default-features = false }
-x86_64_structs = { version = "0.11", git = "https://github.com/memflow/x86_64_structs" }
+x86_64 = { version = "0.12", default-features = false }
 rand = { version = "0.7", optional = true }
 rand_xorshift = { version = "0.2", optional = true }
 bumpalo = { version = "3.4", features = ["collections"] }
@@ -32,7 +32,7 @@ dirs = { version = "3.0", optional = true }
 hashbrown = "0.8"
 
 [dev-dependencies]
-x86_64_structs = { version = "0.11", git = "https://github.com/memflow/x86_64_structs" }
+x86_64 = { version = "0.12", default-features = false }
 rand = { version = "0.7" }
 rand_xorshift = "0.2"
 memflow-derive = { path = "../memflow-derive" }
