Fix VTOP benches being extremely slow

--- a/memflow-bench/Cargo.toml
+++ b/memflow-bench/Cargo.toml
@@ -33,9 +33,9 @@ default = []
 name = "read_dummy"
 harness = false
 
-#[[bench]]
-#name = "read_win32"
-#harness = false
+[[bench]]
+name = "read_win32"
+harness = false
 
 [[bench]]
 name = "batcher"
