--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -3,13 +3,19 @@ name = "memflow"
 version = "0.1.1"
 authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
 edition = "2018"
-license = "MIT"
 description = "core components of the memflow physical memory introspection framework"
+documentation = "https://docs.rs/memflow"
+readme = "../README.md"
 homepage = "https://memflow.github.io"
 repository = "https://github.com/memflow/memflow"
-readme = "../README.md"
+license = "MIT"
+license-file = "../LICENSE"
 keywords = [ "memflow", "introspection", "memory", "dma" ]
 categories = [ "memory-management", "os" ]
+
+[badges]
+maintenance = { status = "actively-developed" }
+codecov = { repository = "github", branch = "master", service = "github" }
 
 [dependencies]
 dataview = { version = "0.1", features = ["derive_pod"] }
