--- a/memflow-win32/Cargo.toml
+++ b/memflow-win32/Cargo.toml
@@ -24,6 +24,7 @@ pelite = { version = "0.9", default-features = false }
 widestring = { version = "0.4", default-features = false, features = ["alloc"] }
 no-std-compat = { version = "0.4", features = ["alloc"] }
 serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
+regex = "1"
 
 # symbolstore
 dirs = { version = "2.0", optional = true }
