--- a/memflow-win32/offsets/4_0_1381_X86.toml
+++ b/memflow-win32/offsets/4_0_1381_X86.toml
@@ -15,6 +15,7 @@ eproc_section_base = 0x190
 eproc_exit_status = 0 #5.1+
 eproc_thread_list = 0 #5.1+
 eproc_wow64 = 0 #5.0+
+eproc_vad_root = 0 #5.2+
 
 kthread_teb = 0 #6.2+
 ethread_list_entry = 0x0 #5.0+
