--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -29,11 +29,13 @@ bumpalo = { version = "3.4", features = ["collections"] }
 no-std-compat = { version = "0.4", features = ["alloc"] }
 itertools = { version = "0.9", default-features = false }
 vector-trees = { version = "0.1", git = "https://github.com/h33p/vector-trees", features = ["bumpalo"] }
+hashbrown = "0.8"
 libloading = { version = "0.6", optional = true }
 memmap = { version = "0.7", optional = true }
-serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }
 dirs = { version = "3.0", optional = true }
-hashbrown = "0.8"
+
+serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }
+toml = { version = "0.5", optional = true }
 
 [dev-dependencies]
 x86_64 = { version = "0.12", default-features = false }
@@ -48,6 +50,6 @@ dummy_mem = ["rand", "rand_xorshift"]
 std = ["coarsetime", "no-std-compat/std"]
 collections = []
 alloc = []
-serde_derive = ["serde"]
+serde_derive = ["serde", "toml"]
 inventory = ["libloading", "dirs"]
 filemap = ["memmap"]
