Fixed nostd compile

--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -44,12 +44,13 @@ rand_xorshift = "0.2"
 memflow-derive = { path = "../memflow-derive" }
 
 [features]
-default = ["std", "serde_derive", "inventory", "filemap"]
+default = ["std", "serde_derive", "inventory", "filemap", "memmapfiles"]
 trace_mmu = [] # enables debug traces in the mmu (very verbose)
 dummy_mem = ["rand", "rand_xorshift"]
 std = ["coarsetime", "no-std-compat/std"]
 collections = []
 alloc = []
-serde_derive = ["serde", "toml"]
+serde_derive = ["serde"]
+memmapfiles = ["toml", "serde_derive"]
 inventory = ["libloading", "dirs"]
 filemap = ["memmap"]
