--- a/memflow-win32/Cargo.toml
+++ b/memflow-win32/Cargo.toml
@@ -24,7 +24,9 @@ pelite = { version = "0.9", default-features = false }
 widestring = { version = "0.4", default-features = false, features = ["alloc"] }
 no-std-compat = { version = "0.4", features = ["alloc"] }
 serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
-regex = "1"
+
+# will be replaced by our own signature scanner
+regex = { version = "1", optional = true }
 
 # symbolstore
 dirs = { version = "2.0", optional = true }
@@ -48,7 +50,7 @@ dataview = "0.1"
 serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
 
 [features]
-default = ["std", "serde_derive", "embed_offsets", "symstore", "download_progress"]
+default = ["std", "serde_derive", "embed_offsets", "symstore", "download_progress", "regex"]
 std = ["no-std-compat/std", "memflow/std"]
 embed_offsets = ["serde", "memflow/serde_derive"]
 collections = []
