--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,9 +92,10 @@ jobs:
           profile: minimal
           toolchain: nightly-2020-11-24
           override: true
-          components: rust-src
+      - run: rustup toolchain install nightly-2020-11-24
+      - run: rustup +nightly-2020-11-24 component add rust-src
       - name: Build no_std crate
-        run: cd nostd-test; cargo build --all-features --verbose
+        run: cd nostd-test; cargo +nightly-2020-11-24 build --all-features --verbose
 
   build-coverage:
     runs-on: ubuntu-latest
