--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -18,7 +18,7 @@ codecov = { repository = "github", branch = "master", service = "github" }
 
 [dependencies]
 memflow-derive = { version = "0.1", path = "../memflow-derive" }
-dataview = { version = "0.1", features = ["derive_pod"] }
+dataview = { version = "0.1", default-features = false }
 log = "0.4"
 bitflags = "1.2"
 coarsetime = { version = "0.1", optional = true }
