--- a/memflow-win32/Cargo.toml
+++ b/memflow-win32/Cargo.toml
@@ -19,7 +19,6 @@ codecov = { repository = "github", branch = "master", service = "github" }
 [dependencies]
 memflow = { version = "0.1", path = "../memflow", default-features = false }
 log = { version = "0.4", default-features = false }
-dataview = "0.1"
 pelite = { version = "0.9", default-features = false }
 widestring = { version = "0.4", default-features = false, features = ["alloc"] }
 no-std-compat = { version = "0.4", features = ["alloc"] }
@@ -46,8 +45,8 @@ colored = "2.0"
 
 [build_dependencies]
 toml = "0.5"
-dataview = "0.1"
 serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
+memflow = { version = "0.1", path = "../memflow", default-features = false }
 
 [features]
 default = ["std", "serde_derive", "embed_offsets", "symstore", "download_progress", "regex"]
