--- a/memflow-ffi/cbindgen.toml
+++ b/memflow-ffi/cbindgen.toml
@@ -7,6 +7,8 @@ style = "both"
 #no_includes = true
 cpp_compat = true
 
+after_includes = "typedef void *Arc_Library;"
+
 [parse]
 parse_deps = true
 
@@ -17,6 +19,9 @@ bitflags = true
 
 [fn]
 sort_by = "None"
+
+[export]
+exclude = ["Arc_Library"]
 
 [export.rename]
 "OptionVoid" = "pvoid"
