More FFI reworkings. Make the plugin responsible for instance creation
Now the plugin provides a function create, which accepts arguments and spits out a PluginInstance upon success. This has the main advantage of object construction not being bound to specific type. This could allow to potentially return a optimized version of a kernel that performs address translations with ScopedVirtualTranslate of that specific architecture. Also, the proc_macro has become even shorter as a result.

--- a/memflow-ffi/cbindgen.toml
+++ b/memflow-ffi/cbindgen.toml
@@ -7,7 +7,7 @@ style = "both"
 #no_includes = true
 cpp_compat = true
 
-after_includes = "typedef void *Arc_Library;"
+after_includes = "typedef void *Option_Arc_Library;"
 
 [parse]
 parse_deps = true
@@ -21,7 +21,7 @@ bitflags = true
 sort_by = "None"
 
 [export]
-exclude = ["Arc_Library"]
+exclude = ["Option_Arc_Library"]
 
 [export.rename]
 "OptionMut_c_void" = "pvoid"
