--- a/memflow-win32/Cargo.toml
+++ b/memflow-win32/Cargo.toml
@@ -16,6 +16,9 @@ categories = [ "api-bindings", "memory-management", "os" ]
 maintenance = { status = "actively-developed" }
 codecov = { repository = "github", branch = "master", service = "github" }
 
+[lib]
+crate-type = ["lib", "cdylib"]
+
 [dependencies]
 memflow = { version = "0.1", path = "../memflow", default-features = false }
 log = { version = "0.4", default-features = false }
@@ -24,6 +27,7 @@ pelite = { version = "0.9", default-features = false }
 widestring = { version = "0.4", default-features = false, features = ["alloc"] }
 no-std-compat = { version = "0.4", features = ["alloc"] }
 serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
+simple_logger = { version = "1.11.0", optional = true }
 
 # will be replaced by our own signature scanner
 regex = { version = "1", optional = true }
@@ -50,8 +54,9 @@ dataview = "0.1"
 serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
 
 [features]
-default = ["std", "serde_derive", "embed_offsets", "symstore", "download_progress", "regex"]
+default = ["std", "plugins", "serde_derive", "embed_offsets", "symstore", "download_progress", "regex"]
 std = ["no-std-compat/std", "memflow/std"]
+plugins = ["memflow/plugins", "simple_logger"]
 embed_offsets = ["serde", "memflow/serde_derive"]
 collections = []
 alloc = []
