--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -41,6 +41,8 @@ toml = { version = "0.5", optional = true }
 [dev-dependencies]
 rand = { version = "0.7" }
 rand_xorshift = "0.2"
+clap = "2.33"
+simple_logger = "1.0"
 
 [features]
 default = ["std", "serde_derive", "plugins", "filemap", "memmapfiles"]
@@ -53,3 +55,7 @@ serde_derive = ["serde"]
 memmapfiles = ["toml", "serde_derive"]
 plugins = ["libloading", "dirs"]
 filemap = ["memmap"]
+
+[[example]]
+name = "read_bench"
+path = "examples/read_bench.rs"
