Reworked win32 keyboard to use the new traits and implemented it in the win32 plugin

--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -80,3 +80,7 @@ path = "examples/process_list.rs"
 [[example]]
 name = "lsmod"
 path = "examples/kernel_modules.rs"
+
+[[example]]
+name = "keyboard"
+path = "examples/keyboard.rs"
