Added os_drop to memflow-ffi and added a C process list example

--- a/memflow-ffi/examples/c/Makefile
+++ b/memflow-ffi/examples/c/Makefile
@@ -1,5 +1,5 @@
-CC =gcc
-CFLAGS = -g -O0 -I../ -I../../memflow-ffi/ -L../../target/release
+CC = gcc
+CFLAGS = -g -O0 -I../../../memflow-ffi/ -L../../../target/release
 LIBS=-lm -ldl -lpthread -l:libmemflow_ffi.a
 
 ODIR=./
@@ -10,8 +10,11 @@ ODIR=./
 phys_mem.out: phys_mem.o
 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
 
+plist.out: plist.o
+	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
+
 .PHONY: all
-all: phys_mem.out
+all: phys_mem.out plist.out
 
 .DEFAULT_GOAL := all
 
