--- a/memflow-win32/offsets/6_1_7601_X64_ECE191A20CFF4465AE46DF96C22638451.toml
+++ b/memflow-win32/offsets/6_1_7601_X64_ECE191A20CFF4465AE46DF96C22638451.toml
@@ -8,6 +8,7 @@ arch = 'X64'
 [offsets]
 list_blink = 8
 eproc_link = 392
+phys_mem_block = 2740280
 kproc_dtb = 40
 eproc_pid = 384
 eproc_name = 736
