--- a/memflow-win32/offsets/10_0_19041_X86_1B1D6AA205E1C87DC63A314ACAA50B491.toml
+++ b/memflow-win32/offsets/10_0_19041_X86_1B1D6AA205E1C87DC63A314ACAA50B491.toml
@@ -8,7 +8,7 @@ arch = 'X86'
 [offsets]
 list_blink = 4
 eproc_link = 232
-phys_mem_block = 0
+phys_mem_block = 3225556
 kproc_dtb = 24
 eproc_pid = 228
 eproc_name = 428
