#55 Added target_list function to plugins, derive macros and Inventory that retrieves a list of available targets

--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -84,3 +84,7 @@ path = "examples/kernel_modules.rs"
 [[example]]
 name = "keyboard"
 path = "examples/keyboard.rs"
+
+[[example]]
+name = "target_list"
+path = "examples/target_list.rs"
