--- a/memflow-ffi/examples/c/Makefile
+++ b/memflow-ffi/examples/c/Makefile
@@ -10,11 +10,14 @@ ODIR=./
 phys_mem.out: phys_mem.o
 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
 
+os.out: os.o
+	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
+
 process_list.out: process_list.o
 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
 
 .PHONY: all
-all: phys_mem.out process_list.out
+all: phys_mem.out os.out process_list.out
 
 .DEFAULT_GOAL := all
 
