--- a/memflow-win32/offsets/6_1_7601_X64_ECE191A20CFF4465AE46DF96C22638451.toml
+++ b/memflow-win32/offsets/6_1_7601_X64_ECE191A20CFF4465AE46DF96C22638451.toml
@@ -17,7 +17,16 @@ eproc_section_base = 624
 eproc_exit_status = 1092
 eproc_thread_list = 776
 eproc_wow64 = 800
+eproc_vad_root = 1096
 kthread_teb = 184
 ethread_list_entry = 1064
 teb_peb = 96
 teb_peb_x86 = 48
+balanced_node_left = 0
+balanced_node_right = 8
+mm_vad_vad_node = 0
+mm_vad_starting_vpn = 24
+mm_vad_ending_vpn = 32
+mm_vad_starting_vpn_high = 0
+mm_vad_ending_vpn_high = 0
+mm_vad_u = 40
