--- a/memflow-win32/offsets/10_0_18362_X64_0AFB69F5FD264D54673570E37B38A3181.toml
+++ b/memflow-win32/offsets/10_0_18362_X64_0AFB69F5FD264D54673570E37B38A3181.toml
@@ -17,7 +17,16 @@ eproc_section_base = 968
 eproc_exit_status = 1620
 eproc_thread_list = 1160
 eproc_wow64 = 1064
+eproc_vad_root = 1624
 kthread_teb = 240
 ethread_list_entry = 1720
 teb_peb = 96
 teb_peb_x86 = 48
+balanced_node_left = 0
+balanced_node_right = 8
+mm_vad_vad_node = 0
+mm_vad_starting_vpn = 24
+mm_vad_ending_vpn = 28
+mm_vad_starting_vpn_high = 32
+mm_vad_ending_vpn_high = 33
+mm_vad_u = 48
