--- a/memflow-win32/offsets/10_0_19041_X64_BBED7C2955FBE4522AAA23F4B8677AD91.toml
+++ b/memflow-win32/offsets/10_0_19041_X64_BBED7C2955FBE4522AAA23F4B8677AD91.toml
@@ -17,7 +17,16 @@ eproc_section_base = 1312
 eproc_exit_status = 2004
 eproc_thread_list = 1504
 eproc_wow64 = 1408
+eproc_vad_root = 2008
 kthread_teb = 240
 ethread_list_entry = 1256
 teb_peb = 96
 teb_peb_x86 = 48
+balanced_node_left = 0
+balanced_node_right = 8
+mm_vad_vad_node = 0
+mm_vad_starting_vpn = 24
+mm_vad_ending_vpn = 28
+mm_vad_starting_vpn_high = 32
+mm_vad_ending_vpn_high = 33
+mm_vad_u = 48
