--- a/memflow-win32/offsets/6_1_7601_X86_684DA42A30CC450F81C535B4D18944B12.toml
+++ b/memflow-win32/offsets/6_1_7601_X86_684DA42A30CC450F81C535B4D18944B12.toml
@@ -17,7 +17,16 @@ eproc_section_base = 300
 eproc_exit_status = 628
 eproc_thread_list = 392
 eproc_wow64 = 0
+eproc_vad_root = 632
 kthread_teb = 136
 ethread_list_entry = 616
 teb_peb = 48
 teb_peb_x86 = 48
+balanced_node_left = 0
+balanced_node_right = 0
+mm_vad_vad_node = 0
+mm_vad_starting_vpn = 12
+mm_vad_ending_vpn = 16
+mm_vad_starting_vpn_high = 0
+mm_vad_ending_vpn_high = 0
+mm_vad_u = 20
