WIP: Reworking memflow to use cglue part #2

--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -57,7 +57,7 @@ dummy_mem = ["rand", "rand_xorshift"]
 std = ["coarsetime", "no-std-compat/std"]
 collections = []
 alloc = []
-serde_derive = ["serde"]
+serde_derive = ["serde", "cglue/serde"]
 memmapfiles = ["toml", "serde_derive"]
 plugins = ["libloading", "dirs", "goblin"]
 filemap = ["memmap"]
