--- a/memflow-win32/Cargo.toml
+++ b/memflow-win32/Cargo.toml
@@ -28,6 +28,7 @@ widestring = { version = "0.4", default-features = false, features = ["alloc"] }
 no-std-compat = { version = "0.4", features = ["alloc"] }
 serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
 simple_logger = { version = "1.11.0", optional = true }
+cglue = { path = "../../../cglue/cglue/" }
 
 # will be replaced by our own signature scanner
 regex = { version = "1", optional = true }
