--- a/memflow-derive/Cargo.toml
+++ b/memflow-derive/Cargo.toml
@@ -23,6 +23,7 @@ proc-macro2 = "1.0"
 syn = "1.0"
 quote = "1.0"
 darling = "0.13"
+proc-macro-crate = "1"
 
 [dev-dependencies]
 memflow = { version = "0.1", path = "../memflow" }
