Fixed ffi-unsafety warnings by replacing the virtual page range info functions with callbacks

--- a/memflow-ffi/cbindgen.toml
+++ b/memflow-ffi/cbindgen.toml
@@ -11,8 +11,10 @@ after_includes = "typedef void *Library;"
 
 [parse]
 parse_deps = true
-
 include = ["memflow"]
+
+[parse.expand]
+crates = ["cglue", "memflow", "memflow-ffi"]
 
 [macro_expansion]
 bitflags = true
