Move virtual page map functions out of VirtualMemory, refactor the 3 VirtualTranslate traits, keeping only one as a frontend, implement phys/virt mem/translate functions directly on process/kernel.

--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -33,6 +33,7 @@ memmap = { version = "0.7", optional = true }
 hashbrown = "0.11"
 fixed-slice-vec = "0.8.0"
 cglue = "0.1.0"
+rangemap = "0.1"
 
 # plugins
 libloading = { version = "0.7", optional = true }
