Cleaned up nostd build and updated to cglue 0.1.1

--- a/memflow-ffi/examples/c/Makefile
+++ b/memflow-ffi/examples/c/Makefile
@@ -10,11 +10,11 @@ ODIR=./
 phys_mem.out: phys_mem.o
 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
 
-os.out: os.o
-	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
+#os.out: os.o
+#	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
 
-process_list.out: process_list.o
-	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
+#process_list.out: process_list.o
+#	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
 
 .PHONY: all
 all: phys_mem.out os.out process_list.out
